添加Job及接口
