# docs/swagger.yaml
@@ -39,6 +39,13 @@ definitions:
       error:
         type: string
     type: object
+  api.ReplyData-types_Job:
+    properties:
+      data:
+        $ref: '#/definitions/types.Job'
+      error:
+        type: string
+    type: object
   api.ReplyList-types_History:
     properties:
       data:
@@ -50,8 +57,21 @@ definitions:
       total:
         type: integer
     type: object
+  api.ReplyList-types_Job:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/types.Job'
+        type: array
+      error:
+        type: string
+      total:
+        type: integer
+    type: object
   api.Result:
     properties:
+      id:
+        type: string
       name:
         type: string
       total:
@@ -69,6 +89,35 @@ definitions:
         type: string
       value:
         type: number
+    type: object
+  types.Job:
+    properties:
+      created:
+        type: string
+      crontab:
+        type: string
+      desc:
+        type: string
+      disabled:
+        type: boolean
+      id:
+        type: string
+      name:
+        type: string
+      points:
+        items:
+          $ref: '#/definitions/types.Point'
+        type: array
+      product_id:
+        type: string
+    type: object
+  types.Point:
+    properties:
+      name:
+        type: string
+      type:
+        description: store increase average count
+        type: string
     type: object
 info:
   contact: {}
@@ -385,7 +434,7 @@ paths:
       summary: 按年统计
       tags:
       - aggregate
-  /query/{id}/delete:
+  /history/{id}/delete:
     get:
       consumes:
       - application/json
@@ -405,8 +454,8 @@ paths:
             $ref: '#/definitions/api.ReplyData-types_History'
       summary: 删除历史
       tags:
-      - query
-  /query/count:
+      - history
+  /history/count:
     post:
       consumes:
       - application/json
@@ -427,8 +476,8 @@ paths:
             $ref: '#/definitions/api.ReplyData-int64'
       summary: 查询历史数量
       tags:
-      - query
-  /query/list:
+      - history
+  /history/list:
     get:
       consumes:
       - application/json
@@ -449,8 +498,8 @@ paths:
             $ref: '#/definitions/api.ReplyList-types_History'
       summary: 查询历史
       tags:
-      - query
-  /query/search:
+      - history
+  /history/search:
     post:
       consumes:
       - application/json
@@ -471,5 +520,235 @@ paths:
             $ref: '#/definitions/api.ReplyList-types_History'
       summary: 查询历史
       tags:
-      - query
+      - history
+  /job/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 获取计划任务
+      parameters:
+      - description: 计划任务ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyData-types_Job'
+      summary: 获取计划任务
+      tags:
+      - job
+    post:
+      consumes:
+      - application/json
+      description: 修改计划任务
+      parameters:
+      - description: 计划任务ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 计划任务信息
+        in: body
+        name: job
+        required: true
+        schema:
+          $ref: '#/definitions/types.Job'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyData-types_Job'
+      summary: 修改计划任务
+      tags:
+      - job
+  /job/{id}/delete:
+    get:
+      consumes:
+      - application/json
+      description: 删除计划任务
+      parameters:
+      - description: 计划任务ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyData-types_Job'
+      summary: 删除计划任务
+      tags:
+      - job
+  /job/{id}/disable:
+    get:
+      consumes:
+      - application/json
+      description: 禁用计划任务
+      parameters:
+      - description: 计划任务ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyData-types_Job'
+      summary: 禁用计划任务
+      tags:
+      - job
+  /job/{id}/enable:
+    get:
+      consumes:
+      - application/json
+      description: 启用计划任务
+      parameters:
+      - description: 计划任务ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyData-types_Job'
+      summary: 启用计划任务
+      tags:
+      - job
+  /job/count:
+    post:
+      consumes:
+      - application/json
+      description: 查询计划任务数量
+      parameters:
+      - description: 查询参数
+        in: body
+        name: search
+        required: true
+        schema:
+          $ref: '#/definitions/api.ParamSearch'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyData-int64'
+      summary: 查询计划任务数量
+      tags:
+      - job
+  /job/create:
+    post:
+      consumes:
+      - application/json
+      description: 创建计划任务
+      parameters:
+      - description: 计划任务信息
+        in: body
+        name: search
+        required: true
+        schema:
+          $ref: '#/definitions/types.Job'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyData-types_Job'
+      summary: 创建计划任务
+      tags:
+      - job
+  /job/export:
+    get:
+      consumes:
+      - application/json
+      description: 导出计划任务
+      produces:
+      - application/octet-stream
+      responses: {}
+      summary: 导出计划任务
+      tags:
+      - product
+  /job/import:
+    post:
+      consumes:
+      - multipart/form-data
+      description: 导入计划任务
+      parameters:
+      - description: 压缩包
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyData-int64'
+      summary: 导入计划任务
+      tags:
+      - product
+  /job/list:
+    get:
+      consumes:
+      - application/json
+      description: 查询计划任务
+      parameters:
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: skip
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyList-types_Job'
+      summary: 查询计划任务
+      tags:
+      - job
+  /job/search:
+    post:
+      consumes:
+      - application/json
+      description: 查询计划任务
+      parameters:
+      - description: 查询参数
+        in: body
+        name: search
+        required: true
+        schema:
+          $ref: '#/definitions/api.ParamSearch'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ReplyList-types_Job'
+      summary: 查询计划任务
+      tags:
+      - job
 swagger: "2.0"
